--- a/build.xml
+++ b/build.xml
@@ -1,39 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
 <project name="Tarea4PSP" default="jar" basedir=".">
 
+    <!-- Definir las carpetas -->
     <property name="src.dir" location="src"/>
     <property name="build.dir" location="build"/>
     <property name="dist.dir" location="dist"/>
     <property name="lib.dir" location="lib"/>
 
+    <!-- Incluir todos los JARs de la carpeta lib -->
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
     </path>
 
+    <!-- Limpiar las carpetas de compilación y distribución -->
     <target name="clean">
         <delete dir="${build.dir}"/>
         <delete dir="${dist.dir}"/>
     </target>
 
+    <!-- Compilación del código fuente -->
     <target name="compile">
         <mkdir dir="${build.dir}"/>
         <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="classpath" includeantruntime="false"/>
     </target>
 
+    <!-- Crear el archivo JAR final -->
     <target name="jar" depends="compile">
         <mkdir dir="${dist.dir}"/>
         <jar destfile="${dist.dir}/Alvarez_Cardenas_Antonio_Tarea4PSP.jar" basedir="${build.dir}">
             <manifest>
                 <attribute name="Main-Class" value="servidor_main.Servidor"/>
-                <attribute name="Class-Path" value="lib/"/>
+                <attribute name="Class-Path" value="lib/jbcrypt-0.4.jar"/>
             </manifest>
         </jar>
     </target>
